# boha

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PKGBUILD  README.md  build.rs  context7.json  justfile
.github/workflows/: aur.yml  ci.yml  pr-lint.yml
.sisyphus/: boulder.json
.sisyphus/drafts/: archive-tweets.md
.sisyphus/notepads/archive-tweets/: blockers.md  completion-summary.md  decisions.md  final-summary.md  issues.md  learnings.md  manual-steps.md  problems.md  progress.md
.sisyphus/notepads/search-command/: completion-summary.md  learnings.md
.sisyphus/plans/: archive-tweets.md  search-command.md
assets/ballet/AA007448/: source_archive.md
assets/bitimage/kitten/: source_archive.md
data/: arweave.jsonc  arweave.toml  b1000.jsonc  b1000.toml  ballet.jsonc  ballet.toml  bitaps.jsonc  bitaps.toml  bitimage.jsonc  bitimage.toml  gsmg.jsonc  gsmg.toml  hash_collision.jsonc  hash_collision.toml  rushwallet.jsonc  solvers.jsonc  solvers.toml  warp.jsonc  zden.jsonc  zden.toml
data/schemas/: b1000.schema.json  ballet.schema.json  bitaps.schema.json  bitimage.schema.json  collection.schema.json  definitions.schema.json  gsmg.schema.json  hash_collision.schema.json  solvers.schema.json  zden.schema.json
scripts/: .env.example  AGENTS.md  Cargo.toml  twitter-cookies.json
scripts/src/: main.rs  types.rs
scripts/src/utils/: dcrdata.rs  esplora.rs  etherscan.rs  mempool.rs  mod.rs  playwright.rs  source_archives.rs  wayback.rs
scripts/tests/: integration.rs
skills/boha/: SKILL.md
skills/boha-cli/: SKILL.md
skills/boha-cli/references/: collections.md
skills/boha/references/: collections.md  types.md
src/: balance.rs  cli.rs  lib.rs  puzzle.rs  verify.rs
src/collections/: arweave.rs  b1000.rs  ballet.rs  bitaps.rs  bitimage.rs  gsmg.rs  hash_collision.rs  mod.rs  rushwallet.rs  warp.rs  zden.rs
tests/: cli.rs  validation.rs
