[package]
name = "boha"
version = "0.15.0"
edition = "2021"
authors = ["oritwoen"]
description = "Crypto bounties, puzzles and challenges data library"
license = "MIT"
repository = "https://github.com/oritwoen/boha"
keywords = ["bitcoin", "puzzle", "bounty", "cryptocurrency"]
categories = ["data-structures", "cryptography"]
exclude = ["assets/"]

[dependencies]
bs58 = "0.5"
sha2 = "0.10"
ripemd = "0.1"
hex = "0.4"
thiserror = "2"
num-bigint = "0.4"
num-traits = "0.2"
serde = { version = "1", features = ["derive"] }

[dependencies.clap]
version = "4"
features = ["derive"]
optional = true

[dependencies.tabled]
version = "0.17"
features = ["ansi"]
optional = true

[dependencies.owo-colors]
version = "4"
optional = true

[dependencies.serde_json]
version = "1"
optional = true

[dependencies.serde_yaml]
version = "0.9"
optional = true

[dependencies.csv]
version = "1"
optional = true

[dependencies.reqwest]
version = "0.12"
features = ["json"]
optional = true

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros"]
optional = true

[dependencies.futures]
version = "0.3"
optional = true

[dependencies.dotenvy]
version = "0.15"
optional = true

[dependencies.human-panic]
version = "2"
optional = true

[dependencies.open]
version = "5"
optional = true

[dependencies.k256]
version = "0.13"
features = ["ecdsa"]
optional = true

[dependencies.bip39]
version = "2"
optional = true

[dependencies.bip32]
version = "0.5"
optional = true

[dependencies.tiny-keccak]
version = "2"
features = ["keccak"]
optional = true

[dependencies.bech32]
version = "0.11"
optional = true

[dependencies.blake2]
version = "0.10"
optional = true

[dependencies.blake-hash]
version = "0.4"
optional = true

[dependencies.chrono]
version = "0.4"
optional = true

[build-dependencies]
json-strip-comments = "3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
num-bigint = "0.4"
hex = "0.4"
bs58 = "0.5"
sha2 = "0.10"
ripemd = "0.1"
k256 = { version = "0.13", features = ["ecdsa"] }
bip38 = "1.1"
chrono = "0.4"

[features]
default = []
cli = ["clap", "tabled", "owo-colors", "serde_json", "serde_yaml", "csv", "human-panic", "open", "k256", "bip39", "bip32", "tiny-keccak", "bech32", "blake-hash", "chrono"]
balance = ["reqwest", "tokio", "futures", "dotenvy"]

[[bin]]
name = "boha"
path = "src/cli.rs"
required-features = ["cli"]

[dev-dependencies]
regex = "1"
assert_cmd = "2"
predicates = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
k256 = { version = "0.13", features = ["arithmetic"] }
bech32 = "0.11"
