[package]
name = "boha-scripts"
version = "0.1.0"
edition = "2021"

[dependencies]
bs58 = { version = "0.5", features = ["check"] }
chrono = "0.4"
hex = "0.4"
hmac = "0.12"
ripemd = "0.1"
secp256k1 = { version = "0.29", features = ["recovery"] }
sha3 = "0.10"
sha2 = "0.10"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
jsonc-parser = { version = "0.29", features = ["cst"] }
dotenvy = "0.15"

[[bin]]
name = "fetch-start-dates"
path = "src/main.rs"

[[bin]]
name = "generate-h160"
path = "src/bin/generate_h160.rs"

[[bin]]
name = "generate-script-hash"
path = "src/bin/generate_script_hash.rs"

[[bin]]
name = "generate-solve-time"
path = "src/bin/generate_solve_time.rs"

[[bin]]
name = "generate-transactions"
path = "src/bin/generate_transactions.rs"

[[bin]]
name = "add-timestamps"
path = "src/bin/add_timestamps.rs"

[[bin]]
name = "derive-pubkey-from-xpub"
path = "src/bin/derive_pubkey_from_xpub.rs"

[[bin]]
name = "generate-wif"
path = "src/bin/generate_wif.rs"

[[bin]]
name = "extract-pubkey"
path = "src/bin/extract_pubkey.rs"
